--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -95,3 +95,18 @@ body.loaded {
 		font-size: 14rem;
 	}
 }
+
+#LoginModal {
+	.modal-footer, #LoginModalContent {
+		& > div {
+			display: none;
+			&.active {
+				display: block;
+			}
+		}
+	}
+	#LoginModalContent {
+		border-radius: 0 0 $panel-border-radius $panel-border-radius;
+		border-top: 0;
+	}
+}
