--- a/assets/stylesheets/_bootstrap.scss
+++ b/assets/stylesheets/_bootstrap.scss
@@ -32,21 +32,21 @@
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/pager";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/labels";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/badges";
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap/jumbotron";
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap/thumbnails";
+//@import "bootstrap-sass-official/assets/stylesheets/bootstrap/jumbotron";
+//@import "bootstrap-sass-official/assets/stylesheets/bootstrap/thumbnails";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/alerts";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/progress-bars";
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap/media";
+//@import "bootstrap-sass-official/assets/stylesheets/bootstrap/media";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/list-group";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/panels";
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-embed";
+//@import "bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-embed";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/wells";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/close";
 
 // Components w/ JavaScript
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/modals";
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap/tooltip";
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap/popovers";
+//@import "bootstrap-sass-official/assets/stylesheets/bootstrap/tooltip";
+//@import "bootstrap-sass-official/assets/stylesheets/bootstrap/popovers";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
