--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -107,3 +107,11 @@ body.loaded {
 		}
 	}
 }
+
+// Error code:
+.has-error {
+	.error-msg {
+		@extend .control-label;
+		font-size: $font-size-small;
+	}
+}
