--- a/views/layout.haml
+++ b/views/layout.haml
@@ -30,8 +30,7 @@
 		-if settings.development?
 			= js :polyfill
 		- else
-			%script{ :src => '//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js' }
-			%script{ :src => '//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js' }
+			%script{ :src => '/javascripts/polyfill.js' }
 		<![endif]-->
 		-#- if settings.development?
 		-#	%script{ :src => '/vendor/jquery/dist/jquery.js'}
